# DjangoLearn

./: .dockerignore  README.md  pyproject.toml
mysite/mysite/: settings.py
mysite/polls/: urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/polls/templates/polls/: detail.html  index.html
